--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel='stylesheet'
-      href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' 
+      rel="stylesheet" 
+      type="text/css">
     <title>client</title>
   </head>
   <body>
