--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel='stylesheet'
       href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' 
-      rel="stylesheet" 
-      type="text/css">
+      rel="stylesheet"> 
     <title>client</title>
   </head>
   <body>
